# SAF

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Instructions.md  LICENSE  README.md  diagnose_signals.py  fused_ppl.py  judge_rc.py  judge_rs_bo.json  judge_rs_mn.json  multi_signal.py  outent_rc_ug.json  outent_title_ug.json  persample_title.py  persample_title_ug_forcecpt.json  pyproject.toml  qppl_rc_kk.json  qppl_rc_mn.json  qppl_rs_bo.json  qppl_rs_mn.json  qppl_rs_ug.json  query_ppl_host.py  records_reading_comprehension_bo.json  records_reading_comprehension_ug.json  records_response_selection_bo.json  records_response_selection_mn.json  records_response_selection_ug.json  requirements.txt  select_host_test.py  t1rest_rc_bo_14B.json  t1rest_rc_kk_14B.json  t1rest_rc_kk_7B.json  t1rest_rc_mn_14B.json  t1rest_rc_mn_7B.json  t1rest_rc_ug_7B.json  t1rest_rs_bo_14B.json  t1rest_rs_kk_14B.json  title_nll_sign.py
analysis/: README.md  analysis_figures.ipynb  veto_data.csv
docs/: api.rst  citing.rst  conf.py  data.rst  index.rst  installation.rst  method.rst  quickstart.rst  reproduction.rst
exploration/: all_signals.py  deadzone.py  disagreement_analysis.py  fused_ppl.py  gen_host_select.py  joint_score.py  judge_rc.py  outpos_entropy.py  query_ppl_host.py  rank_sym.py  ratio_signal.py  select_host_test.py  t1rest_choice.py  title_nll_sign.py
results/: README.md
runpod/: download_models.sh  run_persample.sh  setup.sh  verify_env.sh
safw/: __init__.py  dexperts.py  eval.py  prompts.py  utils.py
scripts/: __init__.py  canonical.py  eval.sh  infer.py  (+6 more)
(+1473 files in other folders)
